--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,14 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
+# Dependencies
+node_modules 
+
+# Environment
 .env
+.env.*
+
+# Build outputs
 dist
 dist-ssr
 *.local
